# youtubei-rs

./: Cargo.toml
src/: lib.rs
src/client/: mod.rs
src/models/: enums.rs
