[package]
name = "youtubei-rs"
version = "2.0.1"
edition = "2021"
license = "AGPL-3.0-only"
keywords = ["api", "youtube", "innertube", "wrapper"]
repository = "https://github.com/11tuvork28/youtubei-rs"
readme = "README.md"
description = "An asynchronous implementation of the internal YouTube API (Innertube)"

[lib]
name = "youtubei_rs"
path = "src/lib.rs"
crate-type = ["lib"]
test = true

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.13", features = ["json", "gzip"] }
tracing = "0.1.37"
